[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_fontkit"
version = "0.5.0"
description = "Easy font management for matplotlib"
readme = "README.md"
authors = [
    {name = "Mr.Milk", email= "zym.zym1220@gmail.com"}
]
license = {text = "MIT License"}
classifiers = [
      "License :: OSI Approved :: MIT License",
      "Programming Language :: Python :: 3",
      "Framework :: Matplotlib",
      "Intended Audience :: Science/Research",
      "Intended Audience :: Developers",
      "Topic :: Scientific/Engineering :: Visualization"
    ]

dependencies = [
    "matplotlib",
    "httpx",
]

requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/Marsilea-viz/mpl_fontkit"

[tool.setuptools.packages.find]
where = ["mpl_fontkit"]