[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mpl_fontkit"
dynamic = ["version", "description"]
readme = "README.md"
authors = [
    {name = "Mr-Milk", email= "zym.zym1220@gmail.com"}
]
license = {text = "MIT License"}
classifiers = [
      "License :: OSI Approved :: MIT License",
      "Programming Language :: Python :: 3",
      "Framework :: Matplotlib",
      "Intended Audience :: Science/Research",
      "Intended Audience :: Developers",
      "Topic :: Scientific/Engineering :: Visualization"
    ]
requires-python = ">= 3.8"
dependencies = [
    "matplotlib",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/Marsilea-viz/mpl_fontkit"
